--- a/parkettlegerhosting/package.json
+++ b/parkettlegerhosting/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hostingpage",
+  "name": "parkettlegerhosting",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@types/node": "18.16.3",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
+    "@types/react": "18.2.1",
+    "@types/react-dom": "18.2.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
