--- a/parkettlegerhosting/package.json
+++ b/parkettlegerhosting/package.json
@@ -20,5 +20,8 @@
     "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.11.2"
   }
 }
